[gd_scene load_steps=4 format=3 uid="uid://ckmuk0gvdh3j0"]

[ext_resource type="Script" uid="uid://d21tb7t5mx63h" path="res://scenes/levels/level_1/interactions/2/interaction_2.gd" id="1_yem8e"]
[ext_resource type="PackedScene" uid="uid://dfubshgw0ydkb" path="res://scenes/text_buble/text_buble.tscn" id="2_qbsqv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5krx"]
size = Vector2(48, 26)

[node name="Interaction2" type="Area2D" groups=["interact"]]
script = ExtResource("1_yem8e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_y5krx")

[node name="Control" parent="." instance=ExtResource("2_qbsqv")]
visible = false
offset_left = -16.0
offset_top = -40.0
offset_right = -16.0
offset_bottom = -40.0

[connection signal="area_entered" from="." to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_detection_area_area_exited"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
